<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_test_1"
        android:id="@+id/button_test_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_test_2"
        android:id="@+id/button_test_2"
        app:layout_constraintStart_toEndOf="@id/button_test_1"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_test_3"
        android:id="@+id/button_test_3"
        app:layout_constraintStart_toEndOf="@id/button_test_2"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_test_4"
        android:id="@+id/button_test_4"
        app:layout_constraintStart_toStartOf="@id/button_test_2"
        app:layout_constraintTop_toBottomOf="@id/button_test_1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_test_5"
        android:id="@+id/button_test_5"
        app:layout_constraintStart_toEndOf="@id/button_test_4"
        app:layout_constraintTop_toBottomOf="@id/button_test_2"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_test_6"
        android:id="@+id/button_test_6"
        app:layout_constraintStart_toEndOf="@id/button_test_3"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_test_7"
        android:id="@+id/button_test_7"
        app:layout_constraintStart_toEndOf="@id/button_test_5"
        app:layout_constraintTop_toBottomOf="@id/button_test_3"
        />
</androidx.constraintlayout.widget.ConstraintLayout>